// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser multiplicative expressions parses left-associative division chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 7,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "kind": 10,
          "line": 1,
          "text": "/",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 10,
        "line": 1,
        "text": "/",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative integer-division chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 32.5,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "kind": 12,
          "line": 1,
          "text": "\\\\",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 12,
        "line": 1,
        "text": "\\\\",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative modulo chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 7,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "kind": 11,
          "line": 1,
          "text": "MOD",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 3,
        },
      },
      "token": Object {
        "kind": 11,
        "line": 1,
        "text": "MOD",
      },
    },
  },
]
`;

exports[`parser multiplicative expressions parses left-associative multiplication chains 1`] = `
Array [
  Assignment {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "_",
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "value": Float {
            "kind": 5,
            "value": 3,
          },
        },
        "right": Literal {
          "value": Float {
            "kind": 5,
            "value": 5,
          },
        },
        "token": Object {
          "kind": 9,
          "line": 1,
          "text": "*",
        },
      },
      "right": Literal {
        "value": Float {
          "kind": 5,
          "value": 7,
        },
      },
      "token": Object {
        "kind": 9,
        "line": 1,
        "text": "*",
      },
    },
  },
]
`;
